--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.1.7
 gunicorn==20.1.0
 keyboard==0.13.5
 pefile==2023.2.7
+psycopg2==2.9.6
 pyinstaller==5.9.0
 pyinstaller-hooks-contrib==2023.1
 pynput==1.7.6
